Fix header spacing and color

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -27,7 +27,7 @@
 }
 
 .title-cheat {
-  color: #000;
+  color: #dc143c;
   font-style: normal;
 }
 
